[package]
name = "ral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
cpal = "0.15.2"
dyn-clone = "1.0.10"
ndarray = "0.15.6"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8.5"

[dependencies.sndfile]
version = "0.1"
features = ["ndarray_features"]